docs/2020.1/studio/getting-started/hardware-setup.md
:omit-from-search

# Hardware setup

--- Platform: Oculus ---

## VR setup

Flipside supports the Oculus Rift or Rift S with Touch Controllers. Visit the [Oculus website](https://www.oculus.com/) for more information.

## Computer

For specs on a VR compatible computer, see Oculus Ready PCs.

> **Important note:** Flipside has only been tested using Windows 10. If you are on a different version of Windows and encounter issues. Please provide feedback through this link: https://www.flipsidexr.com/community

## Business users

Visit [www.oculusforbusiness.com](https://www.oculusforbusiness.com/) for more info on enterprise level support for your Oculus Rift.

--- Platform: SteamVR ---

## VR setup

Flipside runs on any SteamVR-compatible headset such as the Valve Index or HTC Vive. Visit the [Valve Index](https://www.valvesoftware.com/en/index/headset) or [HTC Vive](https://www.vive.com/) websites for more information.

## Computer

For specs on a VR compatible computer, see [Vive Ready PCs](https://www.vive.com/ready/).  

> **Important note:** Flipside has only been tested using Windows 10. If you are on a different version of Windows and encounter issues. Please provide feedback through this link: https://www.flipsidexr.com/community

## Business users

Visit [www.vive.com/us/enterprise](https://www.vive.com/us/enterprise/) for more info on enterprise level support for your HTC Vive.

--- /Platform ---

---

Next: [[: Multiplayer requirements ]]
