docs/2022.1/studio/getting-started/hardware-setup.md
# Hardware setup

--- Platform: Quest ---

## VR setup

All you need to use Flipside Studio on the Meta Quest is the Quest hardware itself. Visit the [Meta Quest store](#) for more information.

## Computer

If you want to capture your Flipside Studio output for live streaming to Twitch, YouTube and other live streaming services, you'll need a PC capable of running [OBS Studio](https://obsproject.com/download).

## Business users

Visit [www.oculusforbusiness.com](https://www.oculusforbusiness.com/) for more info on enterprise level support for your Oculus Rift.

--- Platform: Oculus ---

## VR setup

Flipside Studio supports the Rift or Rift S with Touch Controllers, or the Meta Quest with Link cable. Visit the [Oculus website](https://www.oculus.com/) for more information.

## Computer

For specs on a VR compatible computer, see Oculus Ready PCs.

> **Important note:** Flipside Studio has only been tested using Windows 10. If you are on a different version of Windows and encounter issues, please [provide feedback here](https://www.flipsidexr.com/community).

## Business users

Visit [www.oculusforbusiness.com](https://www.oculusforbusiness.com/) for more info on enterprise level support for your Oculus Rift.

--- Platform: SteamVR ---

## VR setup

Flipside Studio runs on any SteamVR-compatible headset such as the Valve Index or HTC Vive. Visit the [Valve Index](https://www.valvesoftware.com/en/index/headset) or [HTC Vive](https://www.vive.com/) websites for more information.

## Computer

For specs on a VR compatible computer, see [Vive Ready PCs](https://www.vive.com/ready/).

> **Important note:** Flipside Studio has only been tested using Windows 10. If you are on a different version of Windows and encounter issues, please [provide feedback here](https://www.flipsidexr.com/community).

## Business users

Visit [www.vive.com/us/enterprise](https://www.vive.com/us/enterprise/) for more info on enterprise level support for your HTC Vive.

--- /Platform ---

---

Next: [[: Multiplayer requirements ]]
